extra spaces out

--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
       <p>Read Our Brochure:</p>
      </div>
      <div class="clearfix grpelem" id="u1038-11"><!-- content -->
-      <p class="ts-community-Headline-Link" id="u1038-4"><a class="nonblock" href="https://twitter.com/search?q=%23communitycollabs&src=typd&f=realtime">#communitycollabs</a></p>
-      <p class="ts-community-Subhead-Link" id="u1038-9"><span id="u1038-5">Across the country, community collaboratives are partnering with researchers use data to improve the lives of youth.</span>&nbsp;<span id="u1038-7">#communitycollabs</span>&nbsp;is our town hall to address the great potential, as well as the challenges, of working together.</p>
+      <p class="ts-community-Headline-Link" id="u1038-4"><a class="nonblock" href="http://communitycollabs.com">#communitycollabs</a></p>
+      <p class="ts-community-Subhead-Link" id="u1038-9"><span id="u1038-5">Across the country, community collaboratives are partnering with researchers to use data to improve the lives of youth.</span>&nbsp;<span id="u1038-7">#communitycollabs</span>&nbsp;is a newsfeed featuring timely information on this topic.</p>
      </div>
      <div class="clearfix grpelem" id="u1042-4"><!-- content -->
       <p>The John Gardner Center partners with communities to develop leadership, conduct research, and effect change to improve the lives of youth.</p>
@@ -220,8 +220,7 @@
       <p id="u7466-2"><span id="u7466">RESEARCH HIGHLIGHTS</span></p>
       <p class="Main-Headline-Link" id="u7466-5"><a class="nonblock" href="/our_work/CRISResources.html" target="_blank"><span id="u7466-3">College Readiness Resource Series</a></p>
 
-<p id="u8392-8"><span><span class="actAsDiv normal_text" id="u8415"></span></span>
-     More students than ever are enrolling in college after high school, but many are not college-ready. Indicator systems that identify students in need of support are an integral piece of the college-readiness puzzle. The CRIS Initiative takes an innovative tri-level approach which provides data at the student, school, and district levels, enabling districts to take a more comprehensive approach to supporting college readiness.</p>
+<p id="u8392-8">More students than ever are enrolling in college after high school, but many are not college-ready. Indicator systems that identify students in need of support are an integral piece of the college-readiness puzzle. The CRIS Initiative takes an innovative tri-level approach which provides data at the student, school, and district levels, enabling districts to take a more comprehensive approach to supporting college readiness.</p>
      </div>
      <div class="clearfix grpelem" id="u7524"><!-- group -->
       <div class="grpelem" id="u7504"><!-- custom html -->
