job status update

--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -7,7 +7,7 @@
 
 <br>
 <br>
-<p>There are no open positions at this time.</p>
+<a class="header-link" href="https://stanfordcareers.stanford.edu/job-search?jobId=63994">Senior Community Engagement Associate</a>
 
 
          </div>
