core stuff plus content changes

--- a/resources/content-lit_review.html
+++ b/resources/content-lit_review.html
@@ -1,10 +1,12 @@
     <div id="jgc-content">
       <div id="jgc-content-features">
         <div class="jgc-content-feature-item-left">
-<h1 class="title-page-header-big">Literature Review</h1>
+<h1 class="title-page-header-big">Literature Reviews</h1>
 <br>
-
-<a href="/resources/lit_review/Lit-Review_PlayWorks_091027.pdf">Child's Play: Why increasing opportunities to play and be active may improve students' academic and physical outcomes</a> (Oct 2009)
+<a href="/resources/publications/BMOCLitReview2014.pdf">College Access and Completion among Boys and Young Men of Color: Literature Review of Promising Practices</a> (August 2014)
+<br>
+<br>
+<a href="/resources/lit_review/Lit-Review_PlayWorks_091027.pdf">Child's Play: Why increasing opportunities to play and be active may improve students' academic and physical outcomes</a> (October 2009)
 
         </div>
       </div>
