--- a/resources/content-publications.html
+++ b/resources/content-publications.html
@@ -13,7 +13,7 @@
 <br>
 <p><a href="/resources/policy_fact_sheets.html">Policy Fact Sheets:</a> Focused on a particular policy or research topic (e.g., dropouts).</p>
 <br>
-<p><a href="/resources/reports.html">Reports:</a> Pieces generally reporting on JGC research (often implementation or documentation research of a specific initiative) requested by a partner.  Reports differ from issue briefs in that the primary intended audience is the requesting entity and the report may not heavily situate the subject in the literature or have extensive policy implications in its conclusion. </p>
+<p><a href="/resources/reports.html">Reports:</a> Pieces generally reporting on Gardner Center research (often implementation or documentation research of a specific initiative) requested by a partner.  Reports differ from issue briefs in that the primary intended audience is the requesting entity and the report may not heavily situate the subject in the literature or have extensive policy implications in its conclusion. </p>
 <br>
 <p>Academic Papers: Provides significantly more research and methodological detail than other documents; these are not necessarily published.</p><br>
 	<ul>
