--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
        <p id="u1047-3"><a class="nonblock" href="http://gardnercenter.stanford.edu/news/news.html" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="https://www.sree.org/conferences/2014f/" target="_blank">The Society for Research on Educational Effectiveness:<br>Common Ground for<br> Practice and Research</a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="http://www.challengesuccess.org" target="_blank">Success by Design:<br>Is It Possible?</a></p>
        <p>&nbsp;</p>
-       <p>DATE: September 4-6, 2014 &nbsp;</p>
-       <p>LOCATION: Washington, DC</p>
+       <p>DATE: Friday, September 26 &nbsp;</p>
+       <p>LOCATION: Stanford University</p>
 	
        <p id="u1182-9">&nbsp;</p>
       </div>
@@ -231,8 +231,8 @@
      </div>
      <div class="clearfix grpelem" id="u8392-10"><!-- content -->
       <p id="u8392-2"><span id="u8392">NEWS</span></p>
-    <p class="Main-Headline-Link" id="u8392-5"><a class="nonblock" href="/our_work/booklist.html"><span id="u8392-3">Self-Renewal & Youth Development Reading List</span></a></p>
-    <p id="u8392-8"><span><span class="actAsDiv normal_text" id="u8415"><!-- content --><span class="actAsDiv clip_frame" id="u8409"><!-- image --><img class="block" id="u8409_img" src="images/selfrenewal.jpeg" alt="" width="100" height="126"/></span></span></span>Fifty years ago this year, John W. Gardner published <i>Self-Renewal, the Individual and the Innovative Society</i>. To commemorate our namesake's milestone achievement in writing about self-renewal as well as his unshaken belief in the power and potential of youth, our staff generated a reading list. Here you'll find fiction and nonfiction titles by writers whose words have contributed to our own continuous learning and self-renewal, and energize us in our work with youth and communities. </a></p>
+    <p class="Main-Headline-Link" id="u8392-5"><a class="nonblock" href="/resources/publications/BMOCLitReview2014"><span id="u8392-3">College Access and Completion for Boys & Young Men of Color</span></a></p>
+    <p id="u8392-8"><span><span class="actAsDiv normal_text" id="u8415"><!-- content --><span class="actAsDiv clip_frame" id="u8409"><!-- image --><img class="block" id="u8409_img" src="images/youth.jpeg" alt="" width="100" height="126"/></span></span></span>A new Gardner Center literature review, undertaken with support from the College Access Foundation of California, addresses a puzzling phenonmenon. Wide gaps in college enrollment and persistence remain for many Black and Latino boys who reach the end of high school academically prepared for post-secondary education. Our review moves beyond issues of academic preparation to other factors that appear to mediate college access and success for boys and young men of color.</a></p>
      </div>
      <div class="clip_frame grpelem" id="u9534" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="21" data-mu-ie-matrix-dy="-21"><!-- image -->
       <img class="block" id="u9534_img" src="images/red-circle.png" alt="" width="113" height="70"/>
