--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
        <p id="u1047-3"><a class="nonblock" href="http://gardnercenter.stanford.edu/news/news.html" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="http://www.challengesuccess.org" target="_blank">Success by Design:<br>Is It Possible?</a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="http://events.stanford.edu/events/450/45003/" target="_blank">Education and Equality:<br>Two Concepts of Education</a></p>
        <p>&nbsp;</p>
-       <p>DATE: Friday, September 26 &nbsp;</p>
+       <p>DATE: Wednesday, October 8 &nbsp;</p>
        <p>LOCATION: Stanford University</p>
 	
        <p id="u1182-9">&nbsp;</p>
