--- a/resources/content-snapshots.html
+++ b/resources/content-snapshots.html
@@ -15,6 +15,7 @@
 <br>
 <span class="content-bold">2013</span>
 <ul style="list-style: none;">
+<li><a href="/resources/publications/OKFPASS2Snapshot.pdf" class="link-no-underline">Oakland Kids First's PASS-2 Program: Youth and Adults Joining Forces to Promote College Readiness</a></li>
 <li><a href="/resources/publications/BtSSnapshot10.3.13.pdf" class="link-no-underline">Developing Alternative Placement Criteria for Math and English at City College of San Francisco</a></li>
 <li><a href="/resources/publications/OEPAGradRates2013.pdf" class="link-no-underline">Graduation Rates for East Palo Alto Students in the Sequoia Union High School District </a></li>
 <li><a href="/resources/publications/DCYF_SS_7.2013.pdf" class="link-no-underline">Participation Among San Francisco Unified School District Students in Programs Offered by the Department of Children, Youth, & Their Families</a></li>
