--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         <p id="u1039-3"><a class="nonblock" href="http://jgc.stanford.edu/about_jgc/mission.html" target="_blank"><span id="u1039">Gardner Perspectives</span></a></p>
        </div>
        <div class="clearfix colelem" id="u1040-16"><!-- content -->
-        <p class="Perspectives-Subhead-Link" id="u1040-6"><a class="nonblock" href="/resources/publications/GardnerPerspectiveJuly2014.pdf" target="_blank">BRIDGING THE GAP:<br/>THE POTENTIAL OF FAMILY ENGAGEMENT</a></p>
+        <p class="Perspectives-Subhead-Link" id="u1040-6"><a class="nonblock" href="/resources/publications/GardnerPerspectiveOctober2014.pdf" target="_blank">THE YOUNG LEADERS OF NOW</a></p>
         <p id="u1040-7">&nbsp;</p>
-        <p id="u1040-9">Kendra Fehrer, PhD</p>
+        <p id="u1040-9">Mary Hofstedt</p>
         <p id="u1040-11"></p>
-        <p><br/>In practice, family engagement encompasses a wide range of activities and initiatives, from parental participation in school governance to at-home learning activities to classroom volunteering. At the Gardner Center, I've worked on several projects exploring the impact of family engagement on student and community outcomes. Each has caused me to reflect deeply on what family engagement really is and why it matters.</p>
+        <p><br/>Like John W. Gardner, we believe that when the assets of our young people are under-valued and under-tapped, it comes at a tremendous cost to society. Working with youth as full partners in change efforts recognizes youth as the leaders of today, prepares them as leaders of tomorrow, and enriches our communities along the way.</p>
        </div>
       </div>
      </div>
@@ -180,7 +180,7 @@
       </ul>
      </div>
      <div class="shadow clip_frame grpelem" id="u7712"><!-- image -->
-      <img class="block" id="u7712_img" src="images/yellcover.jpg" alt="" width="81" height="122"/>
+      <img class="block" id="u7712_img" src="images/cris lock up.png" alt="" width="81" height="122"/>
      </div>
      <div class="grpelem" id="u1020"><!-- simple frame --></div>
      <div class="grpelem" id="u1021"><!-- simple frame --></div>
@@ -199,18 +199,18 @@
       <p><a class="nonblock" href="http://gardnercenter.stanford.edu/resources/publications.html"><span id="u1037">Publications</span></a></p>
      </div>
      <div class="clearfix grpelem" id="u1181-9"><!-- content -->
-      <p class="Publications-Subhead-Link" id="u1181-3"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/yell.html">Youth Engaged in Leadership and Learning</a></p>
-      <p id="u1181-7">This curriculum is available for free download to anyone interested in training and engaging youth as partners and leaders within their communities. <span id="u1181-5"></p>
+      <p class="Publications-Subhead-Link" id="u1181-3"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/CRISResources.html">CRIS Resource Series</a></p>
+      <p id="u1181-7">This series builds on lessons learned over the 3 year CRIS initiative and offers guidance to schools and districts that aim to develop and enact effective indicator systems. <span id="u1181-5"></p>
      </div>
      <div class="shadow clearfix grpelem" id="u1046"><!-- column -->
       <div class="Events-Headline-Link clearfix colelem" id="u1047-5"><!-- content -->
        <p id="u1047-3"><a class="nonblock" href="http://gardnercenter.stanford.edu/news/news.html" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="http://events.stanford.edu/events/450/45003/" target="_blank">Education and Equality:<br>Two Concepts of Education</a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="http://events.stanford.edu/events/450/45003/" target="_blank">Milbrey McLaughlin presents<br>Common Core State Standards Implementation</a></p>
        <p>&nbsp;</p>
-       <p>DATE: Wednesday, October 8 &nbsp;</p>
-       <p>LOCATION: Stanford University</p>
+       <p>DATE: Friday, October 24 &nbsp;</p>
+       <p>LOCATION: PACE Seminar, Sacramento</p>
 	
        <p id="u1182-9">&nbsp;</p>
       </div>
