--- a/our_work/broadaccess.html
+++ b/our_work/broadaccess.html
@@ -17,6 +17,7 @@ document.createElement("article" );
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 <head>
   <!--#include virtual="/content-head.html" -->
+  <meta name="keywords" content="Silicon Valley,Economy,Technology,Broad access colleges,Community colleges,For-profit colleges,California state universities,Labor market,Postsecondary education,intermediaries">
 </head>
 
 <body>
