--- a/our_work/oepacollaborative.html
+++ b/our_work/oepacollaborative.html
@@ -17,6 +17,7 @@ document.createElement("article" );
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 <head>
   <!--#include virtual="/content-head.html" -->
+  <meta name="keywords" content="East Palo Alto,Grassroots organizations,Youth data archive,Citywide initiative,Youth empowerment,Community-based research,Data linking">
 </head>
 
 <body>
