--- a/our_work/wallace.html
+++ b/our_work/wallace.html
@@ -17,6 +17,7 @@ document.createElement("article" );
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 <head>
   <!--#include virtual="/content-head.html" -->
+  <meta name="keywords" content="Citywide initiative,Place-based initiative,Systems building,Data systems,Technical assistance,Wallace Foundation">
 </head>
 
 <body>
