--- a/content-head.html
+++ b/content-head.html
@@ -15,7 +15,7 @@
   <title>John W Gardner Center for Youth</title>
   <meta name="description" content="The John W. Gardner Center for Youth and Their Communities at Stanford University partners with communities to develop leadership, conduct research, and effect change to improve the lives of youth.">
   <meta name="author" content="">
-  <meta name="keywords" content="Youth Development">
+  <meta name="keywords" content="Out-of-school time, Early childhood education, Family engagement, Health and wellness, College readiness, Afterschool, Longitudinal data systems, Implementation research, Community engagement, Community collaboratives, Prudence Carter, Youth development, Postsecondary success, Youth sector, Capacity building">
 
   <!--  Mobile viewport optimized: j.mp/bplateviewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
