--- a/our_work/CRISResources.html
+++ b/our_work/CRISResources.html
@@ -211,9 +211,7 @@ var __adobewebfontsappname__ = "muse";
          </a>
        </p>
        <p id="u10201-11">&nbsp;</p>
-       <p id="u10201-13">
-         <a class="nonblock" id="u11037" href="http://collegeready.gatesfoundation.org/portals/0/index/index.html" target="_blank">Online Framework</a> 
-       </p> 
+       <p id="u10201-13">&nbsp;</p> 
        <p id="u10201-14">&nbsp;</p>
        <p id="u10201-15">&nbsp;</p>
        <p id="u10201-16">&nbsp;</p>
