--- a/about_jgc/fellows.html
+++ b/about_jgc/fellows.html
@@ -21,7 +21,7 @@ document.createElement("article" );
 
 <body>
 <!--#include virtual="/content-menu-top.html" -->
-<!--#include virtual="content-stanford.html" -->
+<!--#include virtual="content-fellows.html" -->
 <!--#include virtual="/content-footer.html" -->
 <!--#include virtual="/content-analytics.html" -->
 </body>
