big changes this week

--- a/about_jgc/content-fellows.html
+++ b/about_jgc/content-fellows.html
@@ -6,46 +6,89 @@
 
           <h1 class="title-page-header-big">Fellows at the Gardner Center </h1>
           <br>
-<!--photolarge for  302px width and larger-->
-<!--photosmall for  200px to 302px width-->
-<div class="photosmall-left">
-  <div class="photosmall-left">
-    <!-- change the "#" below to the URL you want a user to go if they click the image-->
-    <a href="#" class="lightbox" titles="Fellows at the Gardner Center">
-      <img class="photosmall-left" src="/images/littlefield.jpg" alt="Gardner Center">
-    </a>
-  </div>
-</div>
-<p>
-Sophia<br><br>
+          
+        <span class="content-italic">“The world is an incomparable classroom, and life is a memorable teacher for those who aren't afraid of her.” – John W. Gardner</span>
+        <br><br>
 
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc.
+        The Gardner Center is proud to foster opportunities for youth and young adults to participate in the fields of 
+        youth development and community-based research. This year we are partnering with the <a href="http://sef.org/programs/shinnyo-fellows-program/">Shinnyo-En Foundation</a>, the <a href="https://studentaffairs.stanford.edu/haas/students/postgrad/spin">Haas Center for Public Service</a>, and <a href="http://www.publicallies.org/site/c.liKUL3PNLvF/b.2775815/k.20E5/BE_AN_ALLY.htm">Public Allies</a> to host two post-undergraduate fellows, Sophia Colombari Figueroa and  Cody Young, to collaborate with youth-serving organizations in our near neighbor communities of East Palo Alto and Redwood City, respectively.
+        <br><br>
+        <span class="content-bold">2014-15 FELLOWS</span>
+        <br><br>
+<span class="content-bold">Sophia Colombari Figueroa, Stanford Shinnyo Fellow</span><br><br>
+<!--photosmall for  200px to 302px width-->
+<table style="border: 0px; padding: 10px;">
+<tr>
+<td>
+  <div class="photosmall-left">
+    <!-- change the "#" below to the URL you want a user to go if they click the image-->
+      <img class="photosmall-left" src="/images/team/sophia.jpg" alt="Gardner Center">
+      <br clear=all>
+  </div>
+</td>
+<td>
+<p>
+During her year as a Shinnyo Fellow, Sophia Colombari Figueroa will work with <a href="http://www.rwc2020.org/">Redwood City 2020</a> and the John W. Gardner Center for Youth and their Communities on projects related to community schools, health and wellness, and community engagement. She is passionate about community-based research as well as cross-sector and interdisciplinary collaboration to solve health and social issues. Sophia recently graduated from Stanford University with a BA in Human Biology, concentrating in Community Health and Social Justice. Her dream is to become a primary care provider working with underserved communities to promote individual and public health. 
+<br>
+<br>
+For more information about Sophia’s fellowship year, bookmark her blog: <a href="https://stanfordshinnyofellow.wordpress.com/">Reflections of a Stanford Shinnyo Fellow</a>
 </p>
-<a href="http://www.stanford.edu/example1/">Link 1</a> | 
-<a href="http://www.stanford.edu/example2">Link 2</a>
+</td>
+</tr>
+</table>
 <br>
 <br>
-<div class="photosmall-left">
+<span class="content-bold">Cody Young, Public Ally</span><br><br>
+<!--photosmall for  200px to 302px width-->
+<table style="border: 0px; padding: 10px;">
+<tr>
+<td>
   <div class="photosmall-left">
     <!-- change the "#" below to the URL you want a user to go if they click the image-->
     <a href="#" class="lightbox" titles="Fellows at the Gardner Center">
-      <img class="photosmall-left" src="/images/littlefield.jpg" alt="Gardner Center">
+      <img class="photosmall-left" src="/images/team/cody.jpg" alt="Gardner Center">
     </a>
   </div>
-</div>
+</td>
+<td>
 <p>
-Cody<br><br>
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc.
+Cody Young is the latest addition to the Gardner Center’s East Palo Alto Youth Arts & Music Center team. Her role is to organize, empower, and support a group of youth participants in the creation of the East Palo Alto Youth Art and Music Center. Prior to her Public Allies placement with the Gardner Center, Cody was the Community Project Director for The Social Awareness Network for Activism through Art (SANAA) at UCLA. At SANAA, Cody established and maintained a safe space for South Los Angeles High School students to engage in the process of critical dialogue, critical thinking, and artistic freedom. Cody has also conducted research on how Black male college students express their thoughts about their presence within higher education through music. She is passionate about empowering and valuing the voices of under-represented people in all spaces. She also brings experience in constructing yearly and quarterly funding proposals and grants, working with incarcerated youth, and community engagement. Cody holds two BAs in Anthropology and African American Studies from The University of California, Los Angeles. 
+<br>
+<br>
+For updates from Cody and the Youth Action Team over the course of the 2014-15 year, <a href="mailto:jeremytnguyen@stanford.edu">send an e-mail request</a>
+</p> to join the Youth Art & Music Center mailing list or follow along on <a href="https://www.facebook.com/pages/Youth-Action-Team-for-The-Youth-Arts-and-Music-Center-in-East-Palo-Alto/204332483061251?ref=br_tf">Facebook</a>.
 </p>
-<a href="http://www.stanford.edu/example1/">Link 1</a> | 
-<a href="http://www.stanford.edu/example2">Link 2</a>
+</p>
+</td>
+</tr>
+</table>
 <br>
 <br>  
-<p>
-Past Fellows<br><br>
-Videos go here
-</p>         
-          <br> 
+<span class="content-bold">PAST FELLOWS</span><br><br>
+<!---JBB
+<iframe width="560" height="315" src="//www.youtube.com/embed/prGNtHM7Le8?list=UUYtp74jGqSdHJdIh9v61MNQ" frameborder="0" allowfullscreen></iframe>
+-JBB-->
+<table style="border: 0px; width: 100%;">
+<tr>
+<td>
+  <iframe width="400" height="225" src="//www.youtube.com/embed/prGNtHM7Le8?list=UUYtp74jGqSdHJdIh9v61MNQ" frameborder="0" allowfullscreen></iframe>
+</td>
+<td>&nbsp;&nbsp;&nbsp;</td>
+<td>
+  <iframe src="https://docs.google.com/file/d/0B9perhWHyQbNOXd1NGxhLTJJaXc/preview" width="400" height="225"></iframe>
+ </td>
+ </tr>
+ <tr>
+ <td>Carlo Pasco, 2013-14 Stanford Shinnyo Fellow</td><td></td><td>Isaiah Phillips, 2013-14 Public Ally</td>
+ </tr>
+ </table>
+<br><br><br>
+
+<span class="content-bold">FOR MORE INFORMATION</span>
+<br><br>
+Youth and young adults who are interested in connecting with the Gardner Center should contact Senior Community Engagement Associate <a href="mailto:hofstedt@stanford.edu">Mary Hofstedt</a>.</p>
+
+
 
          </div>
 
