--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -71,6 +71,11 @@
 (650) 723-3099<br>	  
 <p><a href="mailto:larissa.collins@stanford.edu">larissa.collins@stanford.edu</a></p>
           <br>
+  	  <a class="header-link" href="/about_jgc/team_bios/abby.html">Abby Do</a>
+	  <p>Project Facilitator</p>
+(650) 721-2971<br>	  
+<p><a href="mailto:abbydo@stanford.edu">abbydo@stanford.edu</a></p>
+          <br>
  <a class="header-link" href="/about_jgc/team_bios/kendra.html">Kendra Fehrer</a>
 	  <p>Research Associate</p>
 (650) 724-8462<br>	 
@@ -94,7 +99,7 @@
 	  <p><a href="mailto:jorge@stanford.edu">jleos@stanford.edu</a></p>
 	  <br>
 <a class="header-link" href="/about_jgc/team_bios/judy.html">Judy Liang</a>
-	  <p>CORE Project Facilitator</p>
+	  <p>Policy Analyst</p>
 (650) 725-9853<br>	  
 <p><a href="mailto:rlondon@stanford.edu">jcliang@stanford.edu</a></p>
           <br>
