--- a/about_jgc/team_bios/content-judy.html
+++ b/about_jgc/team_bios/content-judy.html
@@ -4,12 +4,11 @@
 
         <div class="jgc-content-feature-item-left">
            <h1 class="content-text-header">Judy Liang</h1>
-           <span class="content-bold">CORE Project Facilitator</span><br>
+           <span class="content-bold">Policy Analyst</span><br>
 	   <br>
 	  <p>
 <img class="bio-std" src="/images/team/judy.jpg">
-<p>Judy Liang is the CORE (California Office to Reform Education) Project Facilitator at the John W. Gardner Center.  Her primary project is to lead all communication efforts between the Gardner Center and CORE as they partner together to improve California’s education accountability and policy implementation.
-Prior to joining the Gardner Center, Judy was a Data Project Manager at the Level Playing Field Institute.  At the Level Playing Field Institute, she helped with data analysis and streamlined data collection processes.  Judy was also part of the Education Pioneers Analyst Fellowship program in the Bay Area.  She is very passionate about K12 education reform and has a specific interest in improving education for low-income minority youth.  Judy enjoys tutoring and mentoring students in Redwood City and East Palo Alto during her spare time. She holds an M.A. in Policy, Organization, and Leadership Studies at the Stanford Graduate School of Education and two B.S. degrees in Information Systems and Supply Chain Management at the University of Maryland.
+<p>Judy Liang is a Policy Analyst at the John W. Gardner Center. Her primary project is to conduct quantitative research for the California Office to Reform Education as they partner together to improve California's education accountability and policy implementation. Prior to joining the Gardner Center, Judy was a Data Project Manager at the Level Playing Field Institute.  At the Level Playing Field Institute, she helped with data analysis and streamlined data collection processes.  Judy was also part of the Education Pioneers Analyst Fellowship program in the Bay Area.  She is very passionate about K12 education reform and has a specific interest in improving education for low-income minority youth.  Judy enjoys tutoring and mentoring students in Redwood City and East Palo Alto during her spare time. She holds an M.A. in Policy, Organization, and Leadership Studies at the Stanford Graduate School of Education and two B.S. degrees in Information Systems and Supply Chain Management at the University of Maryland.
           </p>
 
          </div>
