--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
        <p id="u1047-3"><a class="nonblock" href="http://gardnercenter.stanford.edu/news/news.html" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="http://www.edpolicyinca.org/events/milbrey-mclaughlin" target="_blank">Milbrey McLaughlin:<br>Common Core State Standards Implementation</a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="http://www.edpolicyinca.org/events/milbrey-mclaughlin" target="_blank">SCOPE Brown Bag Seminar:<br>Dr. Pedro Noguera<br>Schooling for Resilience</a></p>
        <p>&nbsp;</p>
-       <p>DATE: Friday, October 24 &nbsp;</p>
-       <p>LOCATION: PACE Seminar, Sacramento</p>
+       <p>DATE: Monday, November 10&nbsp;</p>
+       <p>LOCATION: Stanford University</p>
 	
        <p id="u1182-9">&nbsp;</p>
       </div>
@@ -219,9 +219,9 @@
      <div class="grpelem" id="u1022"><!-- simple frame --></div>
      <div class="clearfix grpelem" id="u7466-9"><!-- content -->
       <p id="u7466-2"><span id="u7466">RESEARCH HIGHLIGHTS</span></p>
-      <p class="Main-Headline-Link" id="u7466-5"><a class="nonblock" href="https://ed.stanford.edu/news/stanford-report-urges-broader-research-agenda-inequality-0" target="_blank"><span id="u7466-3">Inequality Matters Report</a></p>
+      <p class="Main-Headline-Link" id="u7466-5"><a class="nonblock" href="/resources/publications/FEIPIssueBrief.pdf" target="_blank"><span id="u7466-3">Family Engagement in San Mateo, Santa Clara Counties</a></p>
 
-<p id="u8392-8">We are proud to announce the release of Inequality Matters, a report by our Faculty Director Prudence Carter and Professor Sean Reardon. Produced in collaboration with the William T. Grant Foundation and the Ford Foundation, the report reviews more than 40 years of research on inequality. The authors identify 4 gaps in the research to date and urge scholars to focus more on the consequences of inequality and strategies to reduce it.</p>
+<p id="u8392-8">Family engagement in the early years of a child’s learning and development has emerged as a critical strategy used especially for supporting positive outcomes for students from low-income and immigrant communities. Findings from a new Gardner Center study reinforce the necessity of ensuring family engagement is linked to learning, dual-capacity-building, and culturally responsive to families’ needs and experiences.</p>
      </div>
      <div class="clearfix grpelem" id="u7524"><!-- group -->
       <div class="grpelem" id="u7504"><!-- custom html -->
@@ -232,8 +232,8 @@
      </div>
      <div class="clearfix grpelem" id="u8392-10"><!-- content -->
       <p id="u8392-2"><span id="u8392">NEWS</span></p>
-    <p class="Main-Headline-Link" id="u8392-5"><a class="nonblock" href="/resources/publications/BMOCLitReview2014"><span id="u8392-3">College Access and Completion for Boys & Young Men of Color</span></a></p>
-    <p id="u8392-8"><span><span class="actAsDiv normal_text" id="u8415"><!-- content --><span class="actAsDiv clip_frame" id="u8409"><!-- image --><img class="block" id="u8409_img" src="/images/youth.jpg" alt="" width="100" height="126"/></span></span></span>A new Gardner Center literature review, undertaken with support from the College Access Foundation of California, addresses a puzzling phenomenon. Wide gaps in college enrollment and persistence remain for many Black and Latino boys who reach the end of high school academically prepared for post-secondary education. Our review moves beyond issues of academic preparation to other factors that appear to mediate college access and success for boys and young men of color.</a></p>
+    <p class="Main-Headline-Link" id="u8392-5"><a class="nonblock" href="http://www.edpolicyinca.org/blog/what-summer-job-worth-impact-summer-youth-employment-academic-outcomes"><span id="u8392-3">What is a Summer Job Worth?</span></a></p>
+    <p id="u8392-8"><span><span class="actAsDiv normal_text" id="u8415"><!-- content --><span class="actAsDiv clip_frame" id="u8409"><!-- image --><img class="block" id="u8409_img" src="/images/team/Jake.jpg" alt="" width="100" height="126"/></span></span></span>Recent work by Gardner Center Associate Director Jacob Leos-Urbel provides new evidence regarding the impact of large-scale summer youth employment programs on high school students’ school attendance and academic achievement. His paper estimates the impact of New York City's Summer Youth Employment Program (SYEP) on school attendance and other educational outcomes in the following school year for a large sample of low-income high school students. SYEP provides summer jobs and training to youth aged 14 to 21.</a></p>
      </div>
      <div class="clip_frame grpelem" id="u9534" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="21" data-mu-ie-matrix-dy="-21"><!-- image -->
       <img class="block" id="u9534_img" src="images/red-circle.png" alt="" width="113" height="70"/>
