--- a/our_work/content-capacity_building.html
+++ b/our_work/content-capacity_building.html
@@ -9,17 +9,21 @@
 
       <h1 class="content-text-header">Projects</h1>
 <ul>
-<li><a href="csri.html">Community Schools Resource Initiative (CSRI)</a></li>
-<li><a href="cydi.html">Community Youth Development Initiative (CYDI)</a></li>
+<li><a href="collegeaccess.html">College Access Foundation of California</a></li>
+
 <li><a href="cris.html">College Readiness Indicator Systems (CRIS)</a></li>
 
-<li><a href="mapping.html">East Palo  Alto Youth Resource Mapping</a></li>
+<li><a href="mapping.html">East Palo Alto Youth Resource Mapping</a></li>
 
-<li><a href="youth_art_music.html">East Palo Alto Arts, Music and Cultural Center</a></li>
+<li><a href="youth_art_music.html">East Palo Alto Youth Art & Music Center</a></li>
+
+<li><a href="oepacollaborative.html">East Palo Alto Youth Empowerment Strategies for Success (YESS)</a></li>
+
+<li><a href="missionpromise.html">Mission Promise Neighborhood</a></li>
+
+<li><a href="wallace.html">Next Generation After School System Building Initiative</a></li>
 
 <li><a href="prevention_partnership.html">Redwood City-North Fair Oaks Prevention Partnership</a></li>
-
-<li><a href="research_consortium.html">San Francisco Research Consortium </a></li>
 
 <li><a href="yell.html">Youth Engaged in Leadership and Learning (YELL)</a></li>
 
@@ -36,33 +40,38 @@
 <h1 class="title-page-header-big">Leadership Development & Capacity Building</h1><br>
 
           <h1 class="content-text-header">Leadership Development</h1>
-
+<br>
 <p>The Gardner Center supports leaders within school districts and local youth-serving public agencies and community  based organizations to expand their potential by working cooperatively and collaboratively toward common goals.  In this sense, leadership development involves changing the paradigm from merely individually effective leaders to those who "can work in networks of responsibility" as John W. Gardner once wrote, to improve youth outcomes across boundaries and contexts.</p>
 <br>  
 
 <p>We conduct leadership development through facilitation of initiatives and trainings that include:</p>
 <br>
 <ol> 
-<li>Cross-sector planning and community development (<a href="cydi.html">CYDI</a>)</li>
-<li>Youth led research and youth leadership development (<a href="cydi.html">CYDI</a>, <a href="yell.html">YELL</a>, <a href="youth_art_music.html">EPA Arts, Music and Cultural Center</a>)</li>
-<li>Youth–adult partnerships to meet community-identified goals or outcomes (<a href="prevention_partnership.html">Prevention Partnership</a>, <a href="cydi.html">CYDI</a>)</li>
+<li>Cross-sector planning and community development</li>
+<li>Youth led research and youth leadership development</li>
+<li>Youth–adult partnerships to meet community-identified goals or outcomes</li>
 <li>Stanford student support and training (internships, positions, course connections)</li>
 </ol> 
 <br>
 
 <h1 class="content-text-header">Capacity Building</h1>
-
+<br>
 
 <p>
 The Gardner Center works with partners to develop and expand their skills and knowledge about researchable questions, data collection and interpretation, and valid and reliable indicators of positive youth development that will result in actionable findings to improve outcomes for youth. The Gardner Center builds capacity through ongoing partnerships that inquire deeply into "what works for youth" in and across settings and systems, and projects that:
 </p>
 <br>
 <ol> 
-<li>Use data to drive action. (<a href="/our_work/yda.html">Youth Data Archive</a>, <a href="/our_work/cris.html">College Readiness Indicator Systems</a>)</li>
-<li>Embed youth development as a city-wide approach to create thriving environments for youth (<a href="/our_work/cydi.html">CYDI</a>)</li>
-<li>Facilitate the creation of shared frameworks to guide planning, decision making, and ongoing capacity building (<a href="/our_work/cydi.html">CYDI</a>, <a href="/our_work/csri.html">Community School Resource Initiative</a>) </li>
+<li>Use data to drive action.</li>
+<li>Embed youth development as a city-wide approach to create thriving environments for youth.</li>
+<li>Facilitate the creation of shared frameworks to guide planning, decision making, and ongoing capacity building.</li>
 </ol>
-
+<br>
+<h1 class="content-text-header">Fellowship Opportunities</h1>
+<br>
+<p>
+ The Gardner Center is proud to foster opportunities for youth and young adults to participate in the fields of 
+        youth development and community-based research. This year we are partnering with the Shinnyo-En Foundation, the Haas Center for Public Service, and Public Allies to host two post-undergraduate fellows,<a href="/about_jgc/fellows.html">Sophia Colombari Figueroa and Cody Young</a>, to collaborate with youth-serving organizations in our near neighbor communities of East Palo Alto and Redwood City, respectively.
          </div>
 
 
