--- a/our_work/content-feip.html
+++ b/our_work/content-feip.html
@@ -25,6 +25,11 @@
 </ul>
 <br>
 
+      <h1 class="content-text-header">Publications</h1>
+
+<ul>
+<li>Systemic, Integrated, & Sustainable Family Engagement Across the Early Age Spectrum in San Mateo & Santa Clara Counties(<a href="/resources/publications/FEIPIssueBrief.pdf" class="link-no-underline">Issue Brief</a>)
+</ul>
 
 </ul>
     </div> <!--end right side box div-->
