--- a/resources/content-publications.html
+++ b/resources/content-publications.html
@@ -7,19 +7,19 @@
 <br>
 
 </ul>
-<p><a href="/resources/issue_briefs.html">Issue Briefs:</a> Describes analysis with new information and policy implications.  Partners are involved in the process of drafting the issue brief. The target audience includes community partners, state and local decision-makers, and the public at large.</p>
+<p><a href="/resources/issue_briefs.html">Issue Briefs</a> Describes analysis with new information and policy implications.  Partners are involved in the process of drafting the issue brief. The target audience includes community partners, state and local decision-makers, and the public at large.</p>
 <br>
-<p><a href="/resources/snapshots.html">Snapshots:</a> Provides a condensed version of analysis and includes policy implications.  </p>
+<p><a href="/resources/snapshots.html">Snapshots:</a> Provides a condensed version of an analysis and includes policy implications.  </p>
 <br>
 <p><a href="/resources/policy_fact_sheets.html">Policy Fact Sheets:</a> Focused on a particular policy or research topic (e.g., dropouts).</p>
 <br>
-<p><a href="/resources/reports.html">Reports:</a> Pieces generally reporting on Gardner Center research (often implementation or documentation research of a specific initiative) requested by a partner.  Reports differ from issue briefs in that the primary intended audience is the requesting entity and the report may not heavily situate the subject in the literature or have extensive policy implications in its conclusion. </p>
+<p><a href="/resources/reports.html">Reports:</a> Pieces generally reporting on Gardner Center research (often implementation or documentation research of a specific initiative) requested by a partner. </p>
 <br>
-<p>Academic Papers: Provides significantly more research and methodological detail than other documents; these are not necessarily published.</p><br>
+<p>Academic Papers:</p><br>
 	<ul>
 	<li><a href="/resources/journals.html">Journals</a></li><br>
 	<li><a href="/resources/conference_papers.html">Conference Papers</li><br>
-	<li><a href="/resources/lit_review.html">Literature Review</a></li>
+	<li><a href="/resources/lit_review.html">Literature Reviews</a></li>
 	</ul>
 </ul>
 
