--- a/about_jgc/team_bios/abby.html
+++ b/about_jgc/team_bios/abby.html
@@ -21,7 +21,7 @@ document.createElement("article" );
 
 <body>
 <!--#include virtual="/content-menu-top.html" -->
-<!--#include virtual="content-carlo.html" -->
+<!--#include virtual="content-abby.html" -->
 <!--#include virtual="/content-footer.html" -->
 <!--#include virtual="/content-analytics.html" -->
 </body>
