--- a/resources/content-issue-briefs.html
+++ b/resources/content-issue-briefs.html
@@ -8,6 +8,7 @@
 <br>
 <span class="content-bold">2014</span>
 <ul style="list-style: none;">
+<li><a href="/resources/publications/FEIPIssueBrief.pdf" class="link-no-underline">Systemic, Integrated, & Sustainable Family Engagement Across the Early Age Spectrum in San Mateo & Santa Clara Counties</a></li>
 <li><a href="/resources/publications/MPN_IssueBrief_2014.pdf" class="link-no-underline"> Mission Promise Neighborhood: Residence and SFUSD Student Enrollment Patterns 2011-2012</a></li>
 <li><a href="/resources/publications/PFA_IssueBrief_2014.pdf" class="link-no-underline"> Longitudinal View of Educational Outcomes for Preschool for All Participants in Redwood City School District (2014)</a></li>
 <li><a href="/resources/publications/RWC_CS_IB_2014.pdf" class="link-no-underline">The Links Between Program Participation and Students' Outcomes: The Redwood City Community Schools Project</a></li>
